# rust-web-app

./: .env  Cargo.toml  Makefile  notes.txt
client/: package-lock.json  package.json
client/src/: App.vue
client/src/components/: Post.vue
lib/: Cargo.toml
migrations/2021-07-11-093712_add_createTime_to_post/: down.sql  up.sql
solidity/: notes.txt
src/: db.rs  lib.rs  main.rs  models.rs  repo.rs  schema.rs  utils.rs
src/config/: mod.rs
