[package]
name = "actix_web_rust"
version = "0.1.0"
authors = ["nurota <hungnguyendnipr101196@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.14"
env_logger = "0.8"
log = "0.4"
serde_json = "1"
futures = "0.3.15"
actix-files = "0.5.0"
diesel = { version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
config = "0.10"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
throw = "0.1.7"
regex = "1"

[lib]
name = "mylib"
path = "src/lib.rs"